# spec/openapi.yaml
@@ -7,6 +7,10 @@ servers:
 tags:
   - name: recipes
   - name: kb
+
+security:
+  - bearerAuth: []
+
 paths:
   /recipes/_memories:
     get:
@@ -165,9 +169,7 @@ paths:
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/knowledge_chunks'
+                $ref: '#/components/schemas/knowledge_chunks'
   "/kb/{memory}/documents":
     get:
       operationId: listDocuments
@@ -230,6 +232,11 @@ paths:
           description: knowledge is deleted
 
 components:
+  securitySchemes:
+    bearerAuth:
+      type: http
+      scheme: bearer
+      bearerFormat: JWT
   schemas:
     memory:
       type: object
